added a default picture to broken pictures and removed the draggable function of the carousels

--- a/src/index.css
+++ b/src/index.css
@@ -47,12 +47,12 @@ a {
 }
 
 @font-face {
-  src: url("./fonts/Lato-Light.ttf");
+  src: url("./assets/fonts/Lato-Light.ttf");
   font-family: lato;
 }
 
 @font-face {
-  src: url("./fonts/Caveat-Regular.ttf");
+  src: url("./assets/fonts/Caveat-Regular.ttf");
   font-family: caveat;
 }
 
