--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,13 @@ body {
   font-family: lato;
 }
 
+a:focus,
+button:focus,
+input:focus,
+textarea:focus {
+  outline: none;
+}
+
 .document {
   opacity: 1;
 }
@@ -126,11 +133,16 @@ a {
   font-family: caveat;
 }
 
+@font-face {
+  src: url("./assets/fonts/Orbitron-Black.ttf");
+  font-family: Abril;
+}
+
 /* NAVIGATION SECTION */
 .navbar {
   width: 100vw;
   height: 9vh;
-  background-color: #00001a;
+  background-color: black;
 }
 
 .logo {
@@ -139,14 +151,14 @@ a {
   height: 5vh;
   position: relative;
   float: left;
-  transform: translateY(-50%);
+  transform: translateY(-22%);
   margin-left: 40px;
 }
 
 .logo h1 {
-  color: red;
-  font-family: Caveat;
-  font-size: 35px;
+  color: #b80000;
+  font-family: Abril;
+  font-size: 28px;
 }
 
 /* SEARCH BAR SECTION */
@@ -155,21 +167,30 @@ a {
   text-align: center;
   height: 40px;
   width: 50%;
-  transform: translateY(30%);
+  transform: translateY(25%);
 }
 
 .searchbar input {
   height: 38px;
   width: 80%;
-  border-radius: 8px;
+  border-radius: 20px;
   color: black;
+  padding-left: 20px;
+  font-size: 18px;
+  background-color: black;
+  color: white;
+  border: 1px solid white;
 }
 
 .searchbar button {
-  height: 44px;
-  width: 100px;
-  border-radius: 8px;
-  transform: translateX(-80%);
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  transform: translate(-110%, 12%);
+  background-color: transparent;
+  color: white;
+  border: 0;
+  cursor: pointer;
 }
 
 /* HERO CAROUSEL SECTION */
@@ -190,7 +211,7 @@ a {
 .heroContainer img {
   width: 100%;
   height: 100%;
-  filter: brightness(50%);
+  filter: brightness(70%);
 }
 
 .heroContainer h1 {
@@ -250,13 +271,13 @@ a {
   height: 84%;
   width: 80%;
   border-radius: 10px;
-  filter: brightness(70%);
+  filter: brightness(85%);
   margin: auto;
   transition: 0.4s;
 }
 
 .cardContainer img:hover {
-  filter: brightness(110%);
+  filter: brightness(120%);
 }
 
 .homeText {
@@ -335,7 +356,7 @@ a {
 .posterHeader {
   width: 100vw;
   height: 90vh;
-  box-shadow: inset 0px -360px 300px #181818;
+  box-shadow: inset 0px -200px 300px #181818;
   opacity: 0;
   transition: 1.4s;
 }
@@ -407,12 +428,12 @@ a {
   height: 80%;
   width: 80%;
   border-radius: 10px;
-  filter: brightness(70%);
+  filter: brightness(85%);
   margin: auto;
 }
 
 .castCardContainer img:hover {
-  filter: brightness(110%);
+  filter: brightness(120%);
 }
 
 .reviewSection {
@@ -577,9 +598,9 @@ a {
 
   .searchbar button {
     height: 6vh;
-    width: 85px;
+    width: 40px;
     border-radius: 8px;
-    transform: translateX(-12%) translateY(9%);
+    transform: translateX(-110%) translateY(21%);
   }
 
   /* HERO CAROUSEL SECTION */
@@ -722,9 +743,9 @@ a {
   }
 
   .searchbar button {
-    height: 5vh;
-    width: 75px;
-    transform: translateX(-12%) translateY(9%);
+    height: 30px;
+    width: 40px;
+    transform: translateX(-110%) translateY(28%);
   }
 
   /* HERO CAROUSEL SECTION */
