--- a/src/index.css
+++ b/src/index.css
@@ -197,7 +197,9 @@ a {
 
 .heroCarousel {
   height: 91vh;
-  width: 100%;
+  width: 100vw;
+  opacity: 0;
+  transition: 1.4s;
 }
 
 .heroContainer {
@@ -205,13 +207,13 @@ a {
   height: 91vh;
   text-align: center;
   display: flex;
-  justify-content: center;
 }
 
 .heroContainer img {
   width: 100%;
   height: 100%;
   filter: brightness(70%);
+  transition: 1.4s;
 }
 
 .heroContainer h1 {
@@ -251,6 +253,8 @@ a {
 .carousel {
   width: 80%;
   margin: 0 auto;
+  opacity: 0;
+  transition: 1.4s;
 }
 
 .cardContainer {
@@ -731,18 +735,18 @@ a {
     text-align: center;
     height: 8.5vh;
     position: relative;
-    transform: translateY(0);
+    transform: translateY(10%);
     margin-left: 0;
   }
 
   .logo h1 {
-    font-size: 28px;
+    font-size: 20px;
     margin: 8% auto;
   }
 
   /* SEARCH BAR SECTION */
   .searchbar {
-    transform: translateY(25%);
+    transform: translate(10%, 25%);
     float: right;
     width: 58%;
     height: 7vh;
@@ -751,16 +755,21 @@ a {
   .searchbar input {
     height: 4vh;
     width: 70%;
-    transform: translateY(9%);
+    transform: translateY(5%);
   }
 
   .searchbar button {
-    height: 30px;
-    width: 40px;
-    transform: translateX(-110%) translateY(28%);
+    height: 25px;
+    width: 10px;
+    transform: translateX(-320%) translateY(26%);
   }
 
   /* HERO CAROUSEL SECTION */
+
+  .heroCarousel {
+    height: 60vh;
+    transition: 1.4s;
+  }
 
   .heroContainer {
     text-align: center;
