--- a/src/index.css
+++ b/src/index.css
@@ -839,6 +839,14 @@ a {
     padding: 5px;
   }
 
+  .cardContainer {
+    height: 310px;
+  }
+
+  .castCardContainer {
+    height: 310px;
+  }
+
   .reviewSection h2 a {
     font-size: 16px;
   }
